--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-less": "^4.0.1",
     "gulp-newer": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-svgstore": "^7.0.1",
     "gulp-uglify-es": "^2.0.0"
   }
 }
