--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/lenapokrovskaya/petrograd-bike/issues"
   },
-  "homepage": "https://github.com/lenapokrovskaya/petrograd-bike#readme",
+  "homepage": "https://github.com/lenapokrovskaya/petrograd-bike",
   "devDependencies": {
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
@@ -30,5 +30,8 @@
     "gulp-sass": "^4.1.0",
     "gulp-svgstore": "^7.0.1",
     "gulp-uglify-es": "^2.0.0"
+  },
+  "dependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
